--- a/style/style.css
+++ b/style/style.css
@@ -70,7 +70,7 @@ section.normal{
 section.imagem{
     box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.418);
     color: white;
-    background-color: rgb(54, 54, 54);
+    background-color: white;
     background-size: cover;
     background-attachment: fixed;
 }
