--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@
 }
 
 html, body{
-    background-color: gray;
+    background-color: white;
     min-height: 100vh;
     font-family: var(--fonte-padrao);
 }
@@ -70,7 +70,7 @@ section.normal{
 section.imagem{
     box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.418);
     color: white;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.623);
     background-size: cover;
     background-attachment: fixed;
 }
